refactor: replace null returns with empty lists in mappers and extract user not found message